@@ -1,28 +1,32 @@
 package cn.advu.workflow.web.controller.workflow;
 
 import cn.advu.workflow.domain.fcf_vu.BaseBuyOrder;
-import cn.advu.workflow.web.common.ResultJson;
 import cn.advu.workflow.web.common.constant.WebConstants;
+import cn.advu.workflow.web.common.loginContext.UserThreadLocalContext;
 import cn.advu.workflow.web.service.base.BuyOrderService;
 import cn.advu.workflow.web.vo.BaseBuyOrderVO;
-import com.alibaba.dubbo.common.utils.StringUtils;
 import org.activiti.engine.*;
 import org.activiti.engine.repository.ProcessDefinition;
 import org.activiti.engine.runtime.ProcessInstance;
 import org.activiti.engine.runtime.ProcessInstanceQuery;
 import org.activiti.engine.task.Task;
 import org.activiti.engine.task.TaskQuery;
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.ResponseBody;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpSession;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 /**
  * Created by weiqz on 2017/6/4.
@@ -58,31 +62,52 @@ public class TaskController {
      */
     @RequestMapping(value = "todo")
     public String todoList(HttpServletRequest request, HttpSession session, Model model) {
+        Map<String, List<BaseBuyOrderVO>> resultMap = new HashMap();
+
         // 根据当前人的ID查询
-        TaskQuery taskQuery = taskService.createTaskQuery().taskCandidateOrAssigned("u1");
+        TaskQuery taskQuery = taskService.createTaskQuery().taskCandidateOrAssigned(UserThreadLocalContext.getCurrentUser().getUserName());
         List<Task> tasks = taskQuery.list();
 
         // 根据流程的业务ID查询实体并关联
         for (Task task : tasks) {
+            BaseBuyOrderVO baseBuyOrderVO = new BaseBuyOrderVO();
+
             String processInstanceId = task.getProcessInstanceId();
             ProcessInstance processInstance = runtimeService.createProcessInstanceQuery().processInstanceId(processInstanceId).active().singleResult();
             if (processInstance == null) {
                 continue;
             }
             String businessKey = processInstance.getBusinessKey();
-            if (businessKey == null) {
+            if (StringUtils.isEmpty(businessKey)) {
                 continue;
             }
             LOGGER.info("businessKey:{}", businessKey);
+            LOGGER.info("ProcessDefinitionKey:{}", processInstance.getProcessDefinitionKey());
 
 
-//            Leave leave = leaveManager.getLeave(new Long(businessKey));
-//            leave.setTask(task);
-//            leave.setProcessInstance(processInstance);
-//            leave.setProcessDefinition(getProcessDefinition(processInstance.getProcessDefinitionId()));
+            BaseBuyOrder baseBuyOrder = buyOrderService.findById(Integer.valueOf(businessKey)).getData();
+            baseBuyOrderVO.setTask(task);
+            baseBuyOrderVO.setBaseBuyOrder(baseBuyOrder);
+            baseBuyOrderVO.setProcessInstance(processInstance);
+            baseBuyOrderVO.setProcessDefinition(getProcessDefinition(processInstance.getProcessDefinitionId()));
+
+
+
+            String mapKey = processInstance.getProcessDefinitionKey();
+            if (resultMap.get(mapKey) == null) {
+                List<BaseBuyOrderVO> results = new ArrayList<BaseBuyOrderVO>();
+                results.add(baseBuyOrderVO);
+                resultMap.put(mapKey, results);
+            } else {
+                List<BaseBuyOrderVO> results = resultMap.get(mapKey);
+                results.add(baseBuyOrderVO);
+            }
+
         }
-        ResultJson<List<BaseBuyOrder>> buyOrderList = buyOrderService.findAll();
-        model.addAttribute("buyOrderList", "buyOrderList");
+//        LOGGER.debug("results.size:{}", results.size());
+//        model.addAttribute("resultList", results);
+
+        model.addAttribute("resultMap", resultMap);
         return "workflow/task_todoList";
     }
 
@@ -124,6 +149,38 @@ public class TaskController {
         LOGGER.debug("results.size:{}", results.size());
         model.addAttribute("resultList", results);
         return "workflow/task_runningList";
+    }
+
+    /**
+     * 签收任务
+     */
+    @RequestMapping(value = "claim/{id}")
+    public String claim(@PathVariable("id") String taskId, HttpSession session) {
+        String userName = UserThreadLocalContext.getCurrentUser().getUserName();
+        taskService.claim(taskId, userName);
+        return "redirect:/workflow/task/todo";
+    }
+
+    /**
+     * 完成任务
+     *
+     * @param taskId
+     * @return
+     */
+    @RequestMapping(value = "complete")
+    @ResponseBody
+    public String complete(String taskId, String mediaGMPass) {
+        Map paramMap = new HashMap<>();
+        paramMap.put("mediaGMPass", mediaGMPass);
+
+        try {
+            taskService.complete(taskId, paramMap);
+            return "success";
+        } catch (Exception e) {
+            LOGGER.error("", e);
+//            LOGGER.error("error on complete task {}, variables={}", new Object[]{taskId, var.getVariableMap(), e});
+            return "error";
+        }
     }
 
     /**
